Implementando circuitbreaker